deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotalk
  labels:
    app.kubernetes.io/name: gotalk
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: gotalk
